# dreamilybot

./: .gitignore  README.md  main.py  pyproject.toml
cog/: cog_template.txt  start_up.py  textgen.py
dynamic_files/: data.txt
secrets_folder/: unsecret.py
utilities/dreamily/: __init__.py
utilities/util/: __init__.py  data.py
