[tool.poetry]
name = "repl_python3_DreamilyDiscordBot"
version = "0.1.0"
description = ""
authors = ["CunningBard <<>>"]

[tool.poetry.dependencies]
python = "^3.9"
py-cord = "^2.0.0rc1"
orjson = "^3.7.2"
discord = "^1.7.3"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "py-cord>=2.0.0rc1"]
build-backend = "poetry.core.masonry.api"
