[build - system]
build - backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "py-cord>=2.0.0rc1"]

[tool]
[tool.poetry]
authors = ["CunningBard <<>>"]
description = ""
name = "repl_python3_DreamilyDiscordBot"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.1.2"
orjson = "^3.7.2"
py - cord = "^2.1.1"
python = "^3.8"
[tool.poetry.dev - dependencies]
